--- a/settings.json
+++ b/settings.json
@@ -9,5 +9,5 @@
   "mouse_move_duration_max": 0.4,
   "key_press_delay_min": 0.02,
   "key_press_delay_max": 0.05,
-  "smart_search_mode": true
+  "smart_search_mode": false
 }
